<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.spending.SpendingFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_spending"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nominalIncome"
                android:text="@string/_0"
                android:textColor="@color/colorGreen"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/expense"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nominalExpense"
                android:text="@string/_0"
                android:textColor="@color/colorRed"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_weight="6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Total Balance"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nominalBalance"
                android:text="@string/_0"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/btn_expense"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:text="+ Expense"
            android:textColor="@color/colorWhite"
            android:layout_margin="6dp"/>
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorGreen"
            android:id="@+id/btn_income"
            android:text="+ Income"
            android:textColor="@color/colorWhite"
            android:layout_margin="6dp"/>
    </LinearLayout>

    <ProgressBar
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>

</RelativeLayout>